force-app/main/default/objects/breg_BRIM_Transaction_Event__b/breg_BRIM_Transaction_Event__b.object-meta.xml
<CustomObject>
    <label>Transaction Event</label>
    <pluralLabel>Transaction Events</pluralLabel>
</CustomObject>