force-app/main/default/objects/breg_BRIM_Transaction_Event__b/fields/breg_BRIM_CREATED_BY__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_CREATED_BY__c</fullName>
    <label>CREATED_BY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>