force-app/main/default/objects/breg_BRIM_Transaction_Event__b/fields/breg_BRIM_DATE_CREATED__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_DATE_CREATED__c</fullName>
    <label>DATE_CREATED</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>