force-app/main/default/objects/breg_BRIM_Transaction_Event__b/fields/breg_BRIM_EVENT_NOTES__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_EVENT_NOTES__c</fullName>
    <label>EVENT_NOTES</label>
    <length>240</length>
    <required>true</required>
    <type>Text</type>
</CustomField>