force-app/main/default/objects/breg_BRIM_Transaction_Event__b/fields/breg_BRIM_EVENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_EVENT_TYPE__c</fullName>
    <label>EVENT_TYPE</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>