force-app/main/default/objects/breg_BRIM_Transaction_Event__b/fields/breg_BRIM_TRANS_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_TRANS_ID__c</fullName>
    <label>TRANS_ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>