force-app/main/default/objects/breg_BRIM_Transaction_Event__b/fields/breg_Transaction__c.field-meta.xml
<CustomField>
    <fullName>breg_Transaction__c</fullName>
    <label>BREG Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>Transaction Events</relationshipLabel>
    <relationshipName>Transaction_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>